--- a/CityGuide/CityGuide/Classes/Controllers/BaseTableViewController/BaseTableViewController.xib
+++ b/CityGuide/CityGuide/Classes/Controllers/BaseTableViewController/BaseTableViewController.xib
@@ -6,7 +6,6 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BaseTableViewController">
             <connections>
-                <outlet property="headerConst" destination="oGe-aW-pOz" id="A4H-dY-DUP"/>
                 <outlet property="tableView" destination="V29-yS-glK" id="Qhw-7I-Ik1"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -17,7 +16,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="V29-yS-glK">
-                    <rect key="frame" x="8" y="8" width="584" height="592"/>
+                    <rect key="frame" x="8" y="9" width="584" height="592"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <color key="separatorColor" red="0.94509803920000002" green="0.96078431369999995" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                     <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -26,13 +25,23 @@
                         <outlet property="delegate" destination="-1" id="07H-Zu-0kJ"/>
                     </connections>
                 </tableView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UZl-Vo-Elw">
+                    <rect key="frame" x="0.0" y="57" width="600" height="16"/>
+                    <color key="backgroundColor" red="0.94509803920000002" green="0.96078431369999995" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="16" id="Yzt-sY-kyJ"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="0.94509803921568625" green="0.96078431372549022" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="V29-yS-glK" secondAttribute="bottom" id="Fbx-jl-lak"/>
+                <constraint firstAttribute="trailing" secondItem="UZl-Vo-Elw" secondAttribute="trailing" id="9HG-gj-Nf5"/>
+                <constraint firstAttribute="bottom" secondItem="V29-yS-glK" secondAttribute="bottom" constant="-1" id="Fbx-jl-lak"/>
+                <constraint firstItem="V29-yS-glK" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="9" id="PId-sM-wc2"/>
+                <constraint firstItem="UZl-Vo-Elw" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="57" id="YtC-JG-fDa"/>
+                <constraint firstItem="UZl-Vo-Elw" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ge4-ik-Kpc"/>
                 <constraint firstAttribute="trailing" secondItem="V29-yS-glK" secondAttribute="trailing" constant="8" id="gh8-Gn-f2O"/>
                 <constraint firstItem="V29-yS-glK" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="hTT-yj-hx9"/>
-                <constraint firstItem="V29-yS-glK" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="8" id="oGe-aW-pOz"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
