--- a/CityGuide/CityGuide/Classes/Views/MainMenuCell/MainMenuCell.xib
+++ b/CityGuide/CityGuide/Classes/Views/MainMenuCell/MainMenuCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -7,80 +7,70 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" id="KGk-i7-Jjw" customClass="MainMenuCell">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="100"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="78" id="KGk-i7-Jjw" customClass="MainMenuCell">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6lh-yQ-hy3">
-                        <rect key="frame" x="8" y="8" width="584" height="93"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="wxq-Qf-acg">
-                                <rect key="frame" x="8" y="12" width="65" height="65"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="65" id="TN1-YC-qpY"/>
-                                </constraints>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="13" y="17" width="65" height="65"/>
-                                </variation>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Скидки, купоны, спецпредложения" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GLQ-qJ-90M">
-                                <rect key="frame" x="81" y="36" width="507" height="45"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.08235294118" green="0.10980392160000001" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="86" y="46" width="306" height="36"/>
-                                </variation>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Акции" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="le4-QA-MxE">
-                                <rect key="frame" x="81" y="8" width="507" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="LOh-FU-aUA"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <color key="textColor" red="0.08235294118" green="0.10980392160000001" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="86" y="17" width="306" height="21"/>
-                                </variation>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wxq-Qf-acg">
+                        <rect key="frame" x="8" y="10" width="50" height="50"/>
                         <constraints>
-                            <constraint firstItem="wxq-Qf-acg" firstAttribute="bottom" secondItem="GLQ-qJ-90M" secondAttribute="bottom" constant="-4" id="3W6-hP-fBY"/>
-                            <constraint firstItem="GLQ-qJ-90M" firstAttribute="leading" secondItem="le4-QA-MxE" secondAttribute="leading" id="5vS-a8-lt5"/>
-                            <constraint firstAttribute="trailing" secondItem="le4-QA-MxE" secondAttribute="trailing" constant="-4" id="5xe-Ns-jlt"/>
-                            <constraint firstItem="wxq-Qf-acg" firstAttribute="leading" secondItem="6lh-yQ-hy3" secondAttribute="leadingMargin" id="6Ob-7v-qqN"/>
-                            <constraint firstItem="le4-QA-MxE" firstAttribute="leading" secondItem="wxq-Qf-acg" secondAttribute="trailing" constant="8" id="BRY-1A-zGU"/>
-                            <constraint firstItem="GLQ-qJ-90M" firstAttribute="trailing" secondItem="le4-QA-MxE" secondAttribute="trailing" id="Cct-zd-PkE"/>
-                            <constraint firstItem="wxq-Qf-acg" firstAttribute="top" secondItem="6lh-yQ-hy3" secondAttribute="topMargin" constant="4" id="U3Z-Qb-Ygw"/>
-                            <constraint firstItem="le4-QA-MxE" firstAttribute="top" secondItem="6lh-yQ-hy3" secondAttribute="top" constant="8" id="YVq-ZV-ikO"/>
-                            <constraint firstAttribute="bottom" secondItem="wxq-Qf-acg" secondAttribute="bottom" constant="16" id="iJd-cb-Sd6"/>
-                            <constraint firstItem="GLQ-qJ-90M" firstAttribute="top" secondItem="le4-QA-MxE" secondAttribute="bottom" constant="7" id="zcJ-kK-LGo"/>
+                            <constraint firstAttribute="width" constant="50" id="YmT-LT-iWX"/>
+                            <constraint firstAttribute="height" constant="50" id="faw-bi-1L6"/>
                         </constraints>
-                    </view>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Объявления" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="le4-QA-MxE">
+                        <rect key="frame" x="66" y="12" width="155" height="45"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="155" id="OCr-45-MfT">
+                                <variation key="heightClass=regular-widthClass=compact" constant="135"/>
+                            </constraint>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                        <color key="textColor" red="0.08235294118" green="0.10980392160000001" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Скидки, купоны, спецпредложения" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GLQ-qJ-90M">
+                        <rect key="frame" x="229" y="12" width="363" height="45"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" red="0.08235294118" green="0.10980392160000001" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                        <variation key="widthClass=compact">
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        </variation>
+                        <variation key="widthClass=regular">
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        </variation>
+                    </label>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstItem="6lh-yQ-hy3" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" constant="10" id="0Nu-Nv-V64"/>
-                    <constraint firstItem="6lh-yQ-hy3" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="uLs-Nj-gDV"/>
-                    <constraint firstItem="6lh-yQ-hy3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="wXC-hm-zFA"/>
-                    <constraint firstItem="6lh-yQ-hy3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="zZ2-Ea-z0H"/>
+                    <constraint firstItem="wxq-Qf-acg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="2wb-oV-Eo4"/>
+                    <constraint firstItem="wxq-Qf-acg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="2" id="aei-oL-3GT"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="le4-QA-MxE" secondAttribute="bottom" constant="4" id="cuz-uD-Jdf"/>
+                    <constraint firstItem="GLQ-qJ-90M" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="e2O-B3-uo3">
+                        <variation key="widthClass=regular" constant="0.0"/>
+                        <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                    </constraint>
+                    <constraint firstAttribute="bottomMargin" secondItem="GLQ-qJ-90M" secondAttribute="bottom" constant="4" id="k3e-ag-1oU">
+                        <variation key="widthClass=regular" constant="0.0"/>
+                        <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                    </constraint>
+                    <constraint firstItem="GLQ-qJ-90M" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="lfP-Sm-QIO"/>
+                    <constraint firstItem="le4-QA-MxE" firstAttribute="leading" secondItem="wxq-Qf-acg" secondAttribute="trailing" constant="8" id="nVv-8N-znC"/>
+                    <constraint firstItem="le4-QA-MxE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="sKc-ow-9tc"/>
+                    <constraint firstItem="GLQ-qJ-90M" firstAttribute="leading" secondItem="le4-QA-MxE" secondAttribute="trailing" constant="8" id="uEz-5J-z5c"/>
                 </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <connections>
                 <outlet property="data" destination="GLQ-qJ-90M" id="3ZE-M5-iAs"/>
                 <outlet property="image" destination="wxq-Qf-acg" id="L5i-O9-4DA"/>
                 <outlet property="title" destination="le4-QA-MxE" id="jg2-kR-cmR"/>
             </connections>
-            <point key="canvasLocation" x="589" y="368"/>
+            <point key="canvasLocation" x="594" y="380"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="1" width="133" height="130"/>
-    </resources>
 </document>
