--- a/CityGuide/CityGuide/Classes/Views/NewsCollectionCell/NewsCollectionCell.xib
+++ b/CityGuide/CityGuide/Classes/Views/NewsCollectionCell/NewsCollectionCell.xib
@@ -1,18 +1,100 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="NewsCollectionCell">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="gTV-IL-0wX" customClass="NewsCollectionCell">
+            <rect key="frame" x="0.0" y="0.0" width="150" height="252"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="150" height="252"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZeQ-gv-Ud1">
+                        <rect key="frame" x="0.0" y="0.0" width="150" height="35"/>
+                        <color key="backgroundColor" red="0.0" green="0.75294125080108643" blue="0.44705885648727417" alpha="1" colorSpace="deviceRGB"/>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sok-2C-6gK">
+                        <rect key="frame" x="8" y="0.0" width="142" height="33"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="33" id="mOo-8e-LD8"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yn1-a5-KDe">
+                        <rect key="frame" x="0.0" y="35" width="150" height="150"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="150" id="X5Q-QW-w2y"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E0d-sx-U3Y">
+                        <rect key="frame" x="8" y="193" width="134" height="39"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="39" id="Gk0-ja-hZH"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25.09.15" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TVv-R2-W5F">
+                        <rect key="frame" x="22" y="231" width="80" height="15"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="80" id="1HW-QM-J5X"/>
+                            <constraint firstAttribute="height" constant="15" id="hah-YP-rqn"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="time_x" translatesAutoresizingMaskIntoConstraints="NO" id="AuH-Xg-DXF">
+                        <rect key="frame" x="8" y="233" width="10" height="10"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="10" id="6qh-MN-MqH"/>
+                            <constraint firstAttribute="width" constant="10" id="DPh-sV-5fB"/>
+                        </constraints>
+                    </imageView>
+                </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="AuH-Xg-DXF" firstAttribute="top" secondItem="E0d-sx-U3Y" secondAttribute="bottom" constant="1" id="1rE-vZ-s2W"/>
+                <constraint firstAttribute="trailing" secondItem="Sok-2C-6gK" secondAttribute="trailing" id="4yB-q9-rBS"/>
+                <constraint firstItem="yn1-a5-KDe" firstAttribute="top" secondItem="ZeQ-gv-Ud1" secondAttribute="bottom" id="BTO-HK-LVf"/>
+                <constraint firstItem="yn1-a5-KDe" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="ECa-dY-VTh"/>
+                <constraint firstItem="ZeQ-gv-Ud1" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Efq-qG-dKP"/>
+                <constraint firstItem="Sok-2C-6gK" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="MLq-7K-e9q"/>
+                <constraint firstItem="E0d-sx-U3Y" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="aP7-lY-RSA"/>
+                <constraint firstAttribute="trailing" secondItem="TVv-R2-W5F" secondAttribute="trailing" constant="48" id="cGc-EH-ziL"/>
+                <constraint firstItem="Sok-2C-6gK" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="cop-4b-mm9"/>
+                <constraint firstAttribute="trailing" secondItem="E0d-sx-U3Y" secondAttribute="trailing" constant="8" id="d3s-2j-sIH"/>
+                <constraint firstAttribute="bottom" secondItem="AuH-Xg-DXF" secondAttribute="bottom" constant="9" id="hkd-yF-QXX"/>
+                <constraint firstItem="TVv-R2-W5F" firstAttribute="leading" secondItem="AuH-Xg-DXF" secondAttribute="trailing" constant="4" id="jPY-Au-4Ax"/>
+                <constraint firstItem="AuH-Xg-DXF" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="lna-LJ-VDE"/>
+                <constraint firstItem="E0d-sx-U3Y" firstAttribute="top" secondItem="yn1-a5-KDe" secondAttribute="bottom" constant="8" id="oyS-Y4-ql9"/>
+                <constraint firstItem="AuH-Xg-DXF" firstAttribute="top" secondItem="E0d-sx-U3Y" secondAttribute="bottom" constant="1" id="pkJ-lc-Via"/>
+                <constraint firstItem="E0d-sx-U3Y" firstAttribute="top" secondItem="yn1-a5-KDe" secondAttribute="bottom" constant="8" id="q37-Rj-7SQ"/>
+                <constraint firstAttribute="bottom" secondItem="TVv-R2-W5F" secondAttribute="bottom" constant="6" id="qxS-Wt-0Zm"/>
+                <constraint firstItem="yn1-a5-KDe" firstAttribute="top" secondItem="Sok-2C-6gK" secondAttribute="bottom" constant="2" id="tUu-hr-Nn4"/>
+                <constraint firstItem="ZeQ-gv-Ud1" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="usU-Or-wmS"/>
+                <constraint firstAttribute="trailing" secondItem="ZeQ-gv-Ud1" secondAttribute="trailing" id="v3M-iY-JhD"/>
+                <constraint firstAttribute="trailing" secondItem="yn1-a5-KDe" secondAttribute="trailing" id="y3O-VT-nn3"/>
+            </constraints>
+            <size key="customSize" width="144" height="242"/>
+            <connections>
+                <outlet property="describe" destination="E0d-sx-U3Y" id="Ggp-uL-ndD"/>
+                <outlet property="image" destination="yn1-a5-KDe" id="6ps-kB-BYq"/>
+                <outlet property="time" destination="TVv-R2-W5F" id="8TS-hL-CUQ"/>
+                <outlet property="title" destination="Sok-2C-6gK" id="fce-m2-O8a"/>
+            </connections>
+            <point key="canvasLocation" x="470" y="518"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="time_x" width="10" height="10"/>
+    </resources>
 </document>
