--- a/CityGuide/CityGuide/Classes/Controllers/BasketViewController/BasketViewController.xib
+++ b/CityGuide/CityGuide/Classes/Controllers/BasketViewController/BasketViewController.xib
@@ -21,7 +21,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eql-N9-59C">
-                    <rect key="frame" x="8" y="0.0" width="584" height="121"/>
+                    <rect key="frame" x="8" y="60" width="584" height="121"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kqn-Fr-qQe">
                             <rect key="frame" x="116" y="28" width="468" height="26"/>
@@ -68,7 +68,7 @@
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="5fa-Pc-bhX">
-                    <rect key="frame" x="8" y="129" width="584" height="395"/>
+                    <rect key="frame" x="8" y="189" width="584" height="335"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="UoL-UF-hn6"/>
@@ -78,8 +78,20 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3kD-0u-KMT">
                     <rect key="frame" x="8" y="532" width="584" height="68"/>
                     <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="itA-uT-4jp">
+                            <rect key="frame" x="0.0" y="30" width="584" height="34"/>
+                            <color key="backgroundColor" red="0.20000000000000001" green="0.41176470588235292" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                            <state key="normal" title="Заказать">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="sendEmail:" destination="-1" eventType="touchUpInside" id="8El-fH-Moy"/>
+                            </connections>
+                        </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Всего:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nry-5F-p96">
-                            <rect key="frame" x="340" y="8" width="66" height="21"/>
+                            <rect key="frame" x="340" y="1" width="66" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="pvt-Ra-2xS"/>
                                 <constraint firstAttribute="width" constant="66" id="zM9-9I-jwe"/>
@@ -88,49 +100,39 @@
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="itA-uT-4jp">
-                            <rect key="frame" x="0.0" y="30" width="584" height="34"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                            <state key="normal" title="Отправить">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <connections>
-                                <action selector="sendEmail:" destination="-1" eventType="touchUpInside" id="8El-fH-Moy"/>
-                            </connections>
-                        </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="стоимость" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zeg-c6-ZNa">
-                            <rect key="frame" x="477" y="8" width="86" height="21"/>
+                            <rect key="frame" x="477" y="1" width="86" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="86" id="DNA-sW-Frf"/>
                                 <constraint firstAttribute="height" constant="21" id="kpX-MP-mOR"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="150 шт" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l4E-C0-oC0">
-                            <rect key="frame" x="414" y="8" width="55" height="21"/>
+                            <rect key="frame" x="414" y="1" width="55" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="03H-Uh-1sD"/>
                                 <constraint firstAttribute="width" constant="55" id="uYb-aS-QXV"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="l4E-C0-oC0" firstAttribute="top" secondItem="3kD-0u-KMT" secondAttribute="top" constant="8" id="2RU-lr-yGC"/>
+                        <constraint firstItem="l4E-C0-oC0" firstAttribute="top" secondItem="3kD-0u-KMT" secondAttribute="top" constant="1" id="2RU-lr-yGC"/>
                         <constraint firstItem="itA-uT-4jp" firstAttribute="leading" secondItem="3kD-0u-KMT" secondAttribute="leading" id="6su-Xp-y5A"/>
-                        <constraint firstItem="zeg-c6-ZNa" firstAttribute="top" secondItem="3kD-0u-KMT" secondAttribute="top" constant="8" id="FmJ-nR-VR7"/>
+                        <constraint firstItem="zeg-c6-ZNa" firstAttribute="top" secondItem="3kD-0u-KMT" secondAttribute="top" constant="1" id="FmJ-nR-VR7"/>
                         <constraint firstItem="Nry-5F-p96" firstAttribute="leading" secondItem="3kD-0u-KMT" secondAttribute="leading" constant="340" id="HOb-Ws-GCt">
                             <variation key="widthClass=compact" constant="95"/>
                             <variation key="heightClass=regular-widthClass=regular" constant="550"/>
                         </constraint>
-                        <constraint firstItem="itA-uT-4jp" firstAttribute="top" secondItem="Nry-5F-p96" secondAttribute="bottom" constant="1" id="HrN-bT-zd1"/>
+                        <constraint firstItem="itA-uT-4jp" firstAttribute="top" secondItem="Nry-5F-p96" secondAttribute="bottom" constant="8" id="HrN-bT-zd1"/>
                         <constraint firstAttribute="bottom" secondItem="itA-uT-4jp" secondAttribute="bottom" constant="4" id="OA4-6d-Usa"/>
-                        <constraint firstItem="Nry-5F-p96" firstAttribute="top" secondItem="3kD-0u-KMT" secondAttribute="top" constant="8" id="U3H-Ri-Wb6"/>
+                        <constraint firstItem="Nry-5F-p96" firstAttribute="top" secondItem="3kD-0u-KMT" secondAttribute="top" constant="1" id="U3H-Ri-Wb6"/>
                         <constraint firstItem="zeg-c6-ZNa" firstAttribute="leading" secondItem="l4E-C0-oC0" secondAttribute="trailing" constant="8" id="aak-03-t4Y"/>
                         <constraint firstItem="l4E-C0-oC0" firstAttribute="leading" secondItem="Nry-5F-p96" secondAttribute="trailing" constant="8" id="exR-of-SDd"/>
                         <constraint firstItem="l4E-C0-oC0" firstAttribute="leading" secondItem="Nry-5F-p96" secondAttribute="trailing" constant="8" id="fjk-mW-eSE"/>
@@ -145,7 +147,7 @@
                 <constraint firstAttribute="bottom" secondItem="3kD-0u-KMT" secondAttribute="bottom" id="F5E-mf-wSe"/>
                 <constraint firstAttribute="trailing" secondItem="3kD-0u-KMT" secondAttribute="trailing" constant="8" id="GQb-T5-aqH"/>
                 <constraint firstItem="5fa-Pc-bhX" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="NLU-4D-NbK"/>
-                <constraint firstItem="eql-N9-59C" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="TVc-ng-GKS"/>
+                <constraint firstItem="eql-N9-59C" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="60" id="TVc-ng-GKS"/>
                 <constraint firstAttribute="trailing" secondItem="5fa-Pc-bhX" secondAttribute="trailing" constant="8" id="VW3-SF-Sal"/>
                 <constraint firstItem="3kD-0u-KMT" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="VnR-VB-bhg"/>
                 <constraint firstItem="5fa-Pc-bhX" firstAttribute="top" secondItem="eql-N9-59C" secondAttribute="bottom" constant="8" id="VoY-p2-zTf"/>
@@ -154,7 +156,7 @@
                 <constraint firstItem="3kD-0u-KMT" firstAttribute="top" secondItem="5fa-Pc-bhX" secondAttribute="bottom" constant="8" id="tqT-Rx-v7G"/>
                 <constraint firstAttribute="trailing" secondItem="eql-N9-59C" secondAttribute="trailing" constant="8" id="u00-DT-9q2"/>
             </constraints>
-            <nil key="simulatedStatusBarMetrics"/>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
         </view>
     </objects>
 </document>
