--- a/CityGuide/CityGuide/Classes/Controllers/NewsController/NewsController.xib
+++ b/CityGuide/CityGuide/Classes/Controllers/NewsController/NewsController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -7,6 +7,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NewsController">
             <connections>
                 <outlet property="collection" destination="tCj-Nh-hXZ" id="kaI-3W-fxs"/>
+                <outlet property="senderButton" destination="TMO-Wx-iqe" id="VZg-xq-BrM"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -19,25 +20,22 @@
                     <rect key="frame" x="0.0" y="71" width="600" height="49"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TMO-Wx-iqe">
-                            <rect key="frame" x="0.0" y="0.0" width="600" height="42"/>
+                            <rect key="frame" x="8" y="0.0" width="584" height="42"/>
                             <color key="backgroundColor" red="0.2470588235" green="0.31764705879999999" blue="0.70980392160000005" alpha="1" colorSpace="calibratedRGB"/>
-                            <state key="normal" title="Button">
+                            <state key="normal" title="Добавить новость">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.94509803920000002" green="0.96078431369999995" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="49" id="16f-ze-yva"/>
                         <constraint firstAttribute="bottom" secondItem="TMO-Wx-iqe" secondAttribute="bottom" constant="7" id="D0i-F3-B8N"/>
                         <constraint firstItem="TMO-Wx-iqe" firstAttribute="top" secondItem="0IG-3G-91T" secondAttribute="top" id="MOc-eQ-EvG"/>
-                        <constraint firstAttribute="trailing" secondItem="TMO-Wx-iqe" secondAttribute="trailing" id="S9i-lQ-Fmi"/>
-                        <constraint firstItem="TMO-Wx-iqe" firstAttribute="leading" secondItem="0IG-3G-91T" secondAttribute="leading" id="eHS-nM-p3H"/>
+                        <constraint firstAttribute="trailing" secondItem="TMO-Wx-iqe" secondAttribute="trailing" constant="8" id="S9i-lQ-Fmi"/>
+                        <constraint firstItem="TMO-Wx-iqe" firstAttribute="leading" secondItem="0IG-3G-91T" secondAttribute="leading" constant="8" id="eHS-nM-p3H"/>
                     </constraints>
-                    <connections>
-                        <outlet property="sendButton" destination="TMO-Wx-iqe" id="qM6-gY-EiQ"/>
-                    </connections>
                 </view>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="tCj-Nh-hXZ">
                     <rect key="frame" x="8" y="121" width="584" height="479"/>
