--- a/CityGuide/CityGuide/Classes/Views/DishesCell/DishesCell.xib
+++ b/CityGuide/CityGuide/Classes/Views/DishesCell/DishesCell.xib
@@ -2,12 +2,13 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="70" id="KGk-i7-Jjw" customClass="DishesCell">
-            <rect key="frame" x="0.0" y="0.0" width="545" height="70"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="91" id="KGk-i7-Jjw" customClass="DishesCell">
+            <rect key="frame" x="0.0" y="0.0" width="545" height="91"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -16,17 +17,17 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NIM-Le-WF3">
                         <rect key="frame" x="8" y="10" width="50" height="50"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="50" id="LGF-Mp-tu9"/>
-                            <constraint firstAttribute="height" constant="50" id="cfV-TT-Ha5"/>
+                            <constraint firstAttribute="height" constant="50" id="kdF-Fa-wVM"/>
+                            <constraint firstAttribute="width" constant="50" id="ujg-Ea-Kil"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jsj-ma-TXI">
-                        <rect key="frame" x="391" y="23" width="27" height="21"/>
+                        <rect key="frame" x="375" y="23" width="43" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="R2O-Rm-Xhe"/>
-                            <constraint firstAttribute="width" constant="27" id="RNy-Ys-gt5"/>
+                            <constraint firstAttribute="height" constant="21" id="0Bo-q2-3qL"/>
+                            <constraint firstAttribute="width" constant="43" id="Lpf-OC-x2s"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                         <variation key="widthClass=regular" misplaced="YES">
@@ -36,8 +37,8 @@
                     <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="V30-GR-lqy">
                         <rect key="frame" x="426" y="20" width="94" height="29"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="94" id="fmE-PT-hgY"/>
-                            <constraint firstAttribute="height" constant="29" id="oGy-yW-iWS"/>
+                            <constraint firstAttribute="height" constant="29" id="qJe-ox-nfc"/>
+                            <constraint firstAttribute="width" constant="94" id="vlo-0h-7Pn"/>
                         </constraints>
                         <variation key="widthClass=regular" misplaced="YES">
                             <rect key="frame" x="433" y="15" width="94" height="29"/>
@@ -46,12 +47,18 @@
                             <action selector="changeCount:" destination="KGk-i7-Jjw" eventType="valueChanged" id="Wva-kG-E01"/>
                         </connections>
                     </stepper>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nane" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0zv-1m-lho">
-                        <rect key="frame" x="66" y="11" width="317" height="47"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="buF-xD-wgs">
+                        <rect key="frame" x="66" y="50" width="471" height="32"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nane" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0zv-1m-lho">
+                        <rect key="frame" x="66" y="10" width="296" height="50"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="47" id="YJ6-Z2-zfs"/>
+                            <constraint firstAttribute="height" constant="50" id="sLl-6J-7tI"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                         <variation key="widthClass=regular" misplaced="YES">
@@ -60,28 +67,29 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="V30-GR-lqy" secondAttribute="trailing" constant="25" id="3q3-Qk-ici"/>
-                    <constraint firstItem="V30-GR-lqy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="59D-bD-ZXb"/>
-                    <constraint firstItem="0zv-1m-lho" firstAttribute="leading" secondItem="NIM-Le-WF3" secondAttribute="trailing" constant="8" id="9f9-V7-HAc"/>
-                    <constraint firstItem="0zv-1m-lho" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="Cr5-yf-zkf"/>
-                    <constraint firstAttribute="bottom" secondItem="NIM-Le-WF3" secondAttribute="bottom" constant="9" id="OGa-WB-WFq"/>
-                    <constraint firstItem="V30-GR-lqy" firstAttribute="leading" secondItem="Jsj-ma-TXI" secondAttribute="trailing" constant="8" id="dyD-Hv-FLV"/>
-                    <constraint firstAttribute="bottom" secondItem="V30-GR-lqy" secondAttribute="bottom" constant="20" id="fG1-xM-sl7"/>
-                    <constraint firstAttribute="bottom" secondItem="0zv-1m-lho" secondAttribute="bottom" constant="11" id="fPf-We-Whs"/>
-                    <constraint firstItem="NIM-Le-WF3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="hzB-Rj-Pyl"/>
-                    <constraint firstItem="NIM-Le-WF3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="kNk-Xf-Y3j"/>
-                    <constraint firstAttribute="bottom" secondItem="Jsj-ma-TXI" secondAttribute="bottom" constant="25" id="kug-ba-DYX"/>
-                    <constraint firstItem="Jsj-ma-TXI" firstAttribute="leading" secondItem="0zv-1m-lho" secondAttribute="trailing" constant="8" id="t9b-IJ-Sf6"/>
-                    <constraint firstItem="Jsj-ma-TXI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="23" id="zd2-7Y-Vu7"/>
+                    <constraint firstItem="buF-xD-wgs" firstAttribute="top" secondItem="0zv-1m-lho" secondAttribute="bottom" constant="-10" id="6bl-6E-02m"/>
+                    <constraint firstAttribute="trailing" secondItem="V30-GR-lqy" secondAttribute="trailing" constant="25" id="7wi-4u-uFk"/>
+                    <constraint firstItem="Jsj-ma-TXI" firstAttribute="leading" secondItem="0zv-1m-lho" secondAttribute="trailing" constant="13" id="9fd-N4-Rrl"/>
+                    <constraint firstItem="buF-xD-wgs" firstAttribute="leading" secondItem="NIM-Le-WF3" secondAttribute="trailing" constant="8" id="BdH-UZ-AGM"/>
+                    <constraint firstItem="V30-GR-lqy" firstAttribute="leading" secondItem="Jsj-ma-TXI" secondAttribute="trailing" constant="8" id="HIX-oW-CZS"/>
+                    <constraint firstItem="V30-GR-lqy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="MW7-GT-s8X"/>
+                    <constraint firstItem="Jsj-ma-TXI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="23" id="Wk4-do-2Bg"/>
+                    <constraint firstItem="0zv-1m-lho" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="2" id="Yi9-h5-hII"/>
+                    <constraint firstItem="buF-xD-wgs" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="dkh-xc-zK0"/>
+                    <constraint firstItem="NIM-Le-WF3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="n9O-X3-E09"/>
+                    <constraint firstItem="0zv-1m-lho" firstAttribute="leading" secondItem="NIM-Le-WF3" secondAttribute="trailing" constant="8" id="oLS-zh-OBn"/>
+                    <constraint firstItem="NIM-Le-WF3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="rXh-aE-RwQ"/>
+                    <constraint firstAttribute="bottom" secondItem="buF-xD-wgs" secondAttribute="bottom" constant="8" id="vo7-Ei-LEL"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="countDishes" destination="Jsj-ma-TXI" id="EGo-cU-sQT"/>
+                <outlet property="descrip" destination="buF-xD-wgs" id="w58-WW-5uc"/>
                 <outlet property="image" destination="NIM-Le-WF3" id="ice-Xi-u7X"/>
                 <outlet property="name" destination="0zv-1m-lho" id="rHa-5D-qWp"/>
                 <outlet property="stepper" destination="V30-GR-lqy" id="Fdl-tZ-Hdi"/>
             </connections>
-            <point key="canvasLocation" x="413.5" y="308"/>
+            <point key="canvasLocation" x="413.5" y="318.5"/>
         </tableViewCell>
     </objects>
 </document>
